# Multi-Agent_RAG_Refactor_Bot

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LEARNINGS.md  README.md  policy-overrides.md  pyproject.toml
docs/: API.md  ARCHITECTURE.md  Application_Design_and_Specification_for_Dev_Review.md  CHANGELOG_DRAFT.md  DECISIONS.md  Developer Handoff Plan Closing All Gaps for Multi-Agent RAG Refactor Bot v0.1.1.md  LLM_PROVIDER_OPTIONS.md  Multi-Agent_RAG_Refactor_Bot_PRD.md  POST_RELEASE_RISKS_AND_FOLLOWUPS.md  PR_ARTIFACT_SCHEMA.md  PR_BODY_SKILLS_ROLLOUT_FINAL.md  PR_REVIEW_CHECKLIST.md  PR_SPLIT_PLAN.md  QUICKSTART.md  RELEASE_NOTES_v0.2.0.md  SKILLS_ARCHITECTURE.md  SKILLS_ROLLOUT_RELEASE_NOTES_v0.2.0.md  Skills Architecture.md
knowledge/: agent-performance.md  general-patterns.md  known-pitfalls.md
knowledge/category/: agents.md  ast-parsing.md  cli.md  orchestration.md  rag.md  react-rules.md
references/: codebase-map.md
tests/: conftest.py  test_agent_exceptions.py  test_ast_parser.py  test_auditor.py  test_cli.py  test_diff_generator.py  test_diff_models.py  test_embeddings.py  test_model_exports.py  test_orchestrator_e2e.py  test_orchestrator_graph.py  test_orchestrator_recovery.py  test_orchestrator_state.py  test_planner.py  test_planner_integration.py  test_refactor_executor.py  test_repo_indexer.py  test_retriever.py  test_rule_engine.py  test_skills.py  test_task_models.py  test_validator.py
tests/fixtures/: barrel.ts  invalid_syntax.js  orphaned_import_fixture.ts  pr_artifact_markdown_schema.md  sample.js  sample.ts  sample.tsx  (+2 more)
(+50 files in other folders)
