[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "refactor-bot"
version = "0.1.0"
description = "Multi-Agent RAG Refactor Bot for JavaScript/TypeScript codebases"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "pydantic>=2.10.0",
    "tree-sitter>=0.25.0",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-typescript>=0.23.0",
    "openai>=1.40.0",
    "chromadb>=0.6.4",
    "langgraph>=1.0.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.14.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/refactor_bot --cov-report=term"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.uv]
required-environments = ["sys_platform == 'darwin' and platform_machine == 'x86_64'"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
